refactor NamedCsvReader