@@ -2,15 +2,10 @@ package de.siegmar.fastcsv.reader;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.io.Reader;
 import java.io.UncheckedIOException;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
 import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Set;
+import java.util.Objects;
 import java.util.Spliterator;
 import java.util.StringJoiner;
 import java.util.stream.Stream;
@@ -21,7 +16,7 @@ import java.util.stream.StreamSupport;
  * <p>
  * Example use:
  * {@snippet :
- * try (NamedCsvReader csv = NamedCsvReader.builder().build(file)) {
+ * try (NamedCsvReader csv = NamedCsvReader.from(CsvReader.builder().build(file))) {
  *     for (NamedCsvRecord csvRecord : csv) {
  *         // ...
  *     }
@@ -35,38 +30,38 @@ public final class NamedCsvReader implements Iterable<NamedCsvRecord>, Closeable
     private final CloseableIterator<NamedCsvRecord> namedCsvIterator;
 
     private List<String> header;
-    private boolean isInitialized;
 
-    private NamedCsvReader(final CsvReader csvReader) {
+    private NamedCsvReader(final CsvReader csvReader, final List<String> header) {
         this.csvReader = csvReader;
         csvIterator = csvReader.iterator();
         namedCsvIterator = new NamedCsvRecordIterator(csvIterator);
-    }
-
-    private void initialize() {
-        if (!csvIterator.hasNext()) {
-            header = Collections.emptyList();
-        } else {
-            final CsvRecord firstRecord = csvIterator.next();
-
-            final Set<String> headerSet = new LinkedHashSet<>(firstRecord.getFieldCount());
-            for (final String field : firstRecord.getFields()) {
-                if (!headerSet.add(field)) {
-                    throw new IllegalStateException("Duplicate header field '" + field + "' found");
-                }
-            }
-            header = List.copyOf(headerSet);
+        if (header != null) {
+            this.header = List.copyOf(header);
         }
-
-        isInitialized = true;
     }
 
     /**
-     * Constructs a {@link NamedCsvReaderBuilder} to configure and build instances of this class.
-     * @return a new {@link NamedCsvReaderBuilder} instance.
+     * Builds a name based CSV reader based on a regular CsvReader.
+     *
+     * @param csvReader the reader this name based reader should work on.
+     * @return a new instance of this class.
      */
-    public static NamedCsvReaderBuilder builder() {
-        return new NamedCsvReaderBuilder();
+    public static NamedCsvReader from(final CsvReader csvReader) {
+        return new NamedCsvReader(Objects.requireNonNull(csvReader, "csvReader must not be null"), null);
+    }
+
+    /**
+     * Builds a name based CSV reader based on a regular CsvReader.
+     *
+     * @param csvReader the reader this name based reader should work on.
+     * @param header    a custom header name list.
+     * @return a new instance of this class.
+     */
+    public static NamedCsvReader from(final CsvReader csvReader, final List<String> header) {
+        return new NamedCsvReader(
+            Objects.requireNonNull(csvReader, "csvReader must not be null"),
+            Objects.requireNonNull(header, "header must not be null")
+        );
     }
 
     /**
@@ -75,18 +70,23 @@ public final class NamedCsvReader implements Iterable<NamedCsvRecord>, Closeable
      * @return the header fields
      */
     public List<String> getHeader() {
-        if (!isInitialized) {
-            initialize();
+        if (header == null) {
+            header = initialize();
         }
         return header;
     }
 
+    private List<String> initialize() {
+        return csvIterator.hasNext()
+            ? csvIterator.next().getFields()
+            : Collections.emptyList();
+    }
+
     @Override
     public CloseableIterator<NamedCsvRecord> iterator() {
-        if (!isInitialized) {
-            initialize();
+        if (header == null) {
+            header = initialize();
         }
-
         return namedCsvIterator;
     }
 
@@ -147,192 +147,6 @@ public final class NamedCsvReader implements Iterable<NamedCsvRecord>, Closeable
         @Override
         public void close() throws IOException {
             csvIterator.close();
-        }
-
-    }
-
-    /**
-     * This builder is used to create configured instances of {@link NamedCsvReader}. The default
-     * configuration of this class complies with RFC 4180.
-     * <p>
-     * The line delimiter (line-feed, carriage-return or the combination of both) is detected
-     * automatically and thus not configurable.
-     */
-    @SuppressWarnings({"checkstyle:HiddenField", "PMD.AvoidFieldNameMatchingMethodName"})
-    public static final class NamedCsvReaderBuilder {
-
-        private char fieldSeparator = ',';
-        private char quoteCharacter = '"';
-        private char commentCharacter = '#';
-        private boolean skipComments;
-        private boolean ignoreDifferentFieldCount = true;
-        private boolean detectBomHeader;
-        private FieldModifier fieldModifier;
-
-        private NamedCsvReaderBuilder() {
-        }
-
-        /**
-         * Sets the {@code fieldSeparator} used when reading CSV data.
-         *
-         * @param fieldSeparator the field separator character (default: {@code ,} - comma).
-         * @return This updated object, so that additional method calls can be chained together.
-         */
-        public NamedCsvReaderBuilder fieldSeparator(final char fieldSeparator) {
-            this.fieldSeparator = fieldSeparator;
-            return this;
-        }
-
-        /**
-         * Sets the {@code quoteCharacter} used when reading CSV data.
-         *
-         * @param quoteCharacter the character used to enclose fields
-         *                       (default: {@code "} - double quotes).
-         * @return This updated object, so that additional method calls can be chained together.
-         */
-        public NamedCsvReaderBuilder quoteCharacter(final char quoteCharacter) {
-            this.quoteCharacter = quoteCharacter;
-            return this;
-        }
-
-        /**
-         * Sets the {@code commentCharacter} used to comment lines.
-         *
-         * @param commentCharacter the character used to comment lines (default: {@code #} - hash)
-         * @return This updated object, so that additional method calls can be chained together.
-         * @see #skipComments(boolean)
-         */
-        public NamedCsvReaderBuilder commentCharacter(final char commentCharacter) {
-            this.commentCharacter = commentCharacter;
-            return this;
-        }
-
-        /**
-         * Defines if commented records should be detected and skipped when reading data.
-         *
-         * @param skipComments if commented records should be skipped (default: {@code true}).
-         * @return This updated object, so that additional method calls can be chained together.
-         */
-        public NamedCsvReaderBuilder skipComments(final boolean skipComments) {
-            this.skipComments = skipComments;
-            return this;
-        }
-
-        /**
-         * Defines if an {@link MalformedCsvException} should be thrown if records do contain a
-         * different number of fields.
-         *
-         * @param ignoreDifferentFieldCount if exception should be suppressed, when CSV data contains
-         *                                   different field count (default: {@code true}).
-         * @return This updated object, so that additional method calls can be chained together.
-         */
-        public NamedCsvReaderBuilder ignoreDifferentFieldCount(final boolean ignoreDifferentFieldCount) {
-            this.ignoreDifferentFieldCount = ignoreDifferentFieldCount;
-            return this;
-        }
-
-        /**
-         * Defines if an optional BOM (Byte order mark) header should be detected.
-         * BOM detection only applies for direct file access and comes with a performance penalty.
-         *
-         * @param detectBomHeader if detection should be enabled (default: {@code false})
-         * @return This updated object, so that additional method calls can be chained together.
-         */
-        public NamedCsvReaderBuilder detectBomHeader(final boolean detectBomHeader) {
-            this.detectBomHeader = detectBomHeader;
-            return this;
-        }
-
-        /**
-         * Registers an optional field modifier. Used to modify the field values.
-         * By default, no field modifier is used.
-         *
-         * @param fieldModifier the modifier to use.
-         * @return This updated object, so that additional method calls can be chained together.
-         */
-        public NamedCsvReaderBuilder fieldModifier(final FieldModifier fieldModifier) {
-            this.fieldModifier = fieldModifier;
-            return this;
-        }
-
-        /**
-         * Constructs a new {@link NamedCsvReader} for the specified file using UTF-8 as the character set.
-         *
-         * This is a convenience method for calling {@link #build(Path, Charset)} with
-         * {@link StandardCharsets#UTF_8} as the charset.
-         *
-         * @param file    the file to read data from.
-         * @return a new NamedCsvReader - never {@code null}. Don't forget to close it!
-         * @throws IOException if an I/O error occurs.
-         * @throws NullPointerException if file or charset is {@code null}
-         */
-        public NamedCsvReader build(final Path file) throws IOException {
-            return build(file, StandardCharsets.UTF_8);
-        }
-
-        /**
-         * Constructs a new {@link NamedCsvReader} for the specified arguments.
-         *
-         * @param file    the file to read data from.
-         * @param charset the character set to use. If BOM header detection is enabled
-         *                (via {@link #detectBomHeader(boolean)}), this acts as a default when no BOM header was found.
-         * @return a new NamedCsvReader - never {@code null}. Don't forget to close it!
-         * @throws IOException if an I/O error occurs.
-         * @throws NullPointerException if file or charset is {@code null}
-         */
-        public NamedCsvReader build(final Path file, final Charset charset) throws IOException {
-            return new NamedCsvReader(csvReaderBuilder().build(file, charset));
-        }
-
-        /**
-         * Constructs a new {@link NamedCsvReader} for the specified arguments.
-         * <p>
-         * This library uses built-in buffering, so you do not need to pass in a buffered Reader
-         * implementation such as {@link java.io.BufferedReader}. Performance may be even likely
-         * better if you do not.
-         * Use {@link #build(Path, Charset)} for optimal performance when
-         * reading files and {@link #build(String)} when reading Strings.
-         *
-         * @param reader the data source to read from.
-         * @return a new NamedCsvReader - never {@code null}.
-         * @throws NullPointerException if reader is {@code null}
-         */
-        public NamedCsvReader build(final Reader reader) {
-            return new NamedCsvReader(csvReaderBuilder().build(reader));
-        }
-
-        /**
-         * Constructs a new {@link NamedCsvReader} for the specified arguments.
-         *
-         * @param data    the data to read.
-         * @return a new NamedCsvReader - never {@code null}.
-         */
-        public NamedCsvReader build(final String data) {
-            return new NamedCsvReader(csvReaderBuilder().build(data));
-        }
-
-        private CsvReader.CsvReaderBuilder csvReaderBuilder() {
-            return CsvReader.builder()
-                .fieldSeparator(fieldSeparator)
-                .quoteCharacter(quoteCharacter)
-                .commentCharacter(commentCharacter)
-                .commentStrategy(skipComments ? CommentStrategy.SKIP : CommentStrategy.NONE)
-                .ignoreDifferentFieldCount(ignoreDifferentFieldCount)
-                .detectBomHeader(detectBomHeader)
-                .fieldModifier(fieldModifier);
-        }
-
-        @Override
-        public String toString() {
-            return new StringJoiner(", ", NamedCsvReaderBuilder.class.getSimpleName() + "[", "]")
-                .add("fieldSeparator=" + fieldSeparator)
-                .add("quoteCharacter=" + quoteCharacter)
-                .add("commentCharacter=" + commentCharacter)
-                .add("skipComments=" + skipComments)
-                .add("ignoreDifferentFieldCount=" + ignoreDifferentFieldCount)
-                .add("detectBomHeader=" + detectBomHeader)
-                .add("fieldModifier=" + fieldModifier)
-                .toString();
         }
 
     }
